[gd_scene load_steps=6 format=3 uid="uid://dpym8ryniathp"]

[ext_resource type="Script" path="res://main.gd" id="1_s04vd"]
[ext_resource type="AudioStream" uid="uid://dplb8146daomw" path="res://music.mp3" id="2_culhk"]
[ext_resource type="AudioStream" uid="uid://c65i5lgkee2ge" path="res://sound.mp3" id="3_fgrcu"]
[ext_resource type="AudioStream" uid="uid://djfv58ma5tyuf" path="res://solved.mp3" id="4_18tm3"]
[ext_resource type="PackedScene" uid="uid://d0eb6mj1hxpjt" path="res://Gates.tscn" id="5_kdpsm"]

[node name="main" type="Node2D"]
script = ExtResource("1_s04vd")
possibleTeethPerSpot = 6

[node name="Label" type="Label" parent="."]
z_index = 20
offset_left = 151.0
offset_top = 226.0
offset_right = 241.0
offset_bottom = 293.0

[node name="CreditsLabel" type="Label" parent="."]
offset_left = 442.0
offset_top = 2.0
offset_right = 532.0
offset_bottom = 69.0
text = "Sound by @azial766"

[node name="WonRect" type="ColorRect" parent="."]
visible = false
z_index = 10
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(23.3933, 23.3566)
color = Color(0.318833, 0.443863, 0.330141, 1)

[node name="WonLabel" type="Label" parent="."]
visible = false
z_index = 20
offset_left = 35.0
offset_top = 3.0
offset_right = 311.0
offset_bottom = 234.0
scale = Vector2(1.85964, 1.96521)
text = "You completed the game.

I didn't expect anyone to do that.

So uuuhhhh, this is awkward.

I didn't  make a reward for winners.

I just spent a minute chosing a nice
background color, problem solved.

"

[node name="HelpLabel" type="Label" parent="."]
z_index = 20
offset_left = 152.0
offset_top = 320.0
offset_right = 440.0
offset_bottom = 387.0
text = "You only need one button: SPACEBAR
Press or Hold.
Diamond hands win."

[node name="KeyMarker" type="Marker2D" parent="."]
position = Vector2(42, 65)

[node name="SolutionKeyMarker" type="Marker2D" parent="."]
position = Vector2(42, 311)

[node name="Background" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_culhk")
volume_db = -15.0
autoplay = true
parameters/looping = true

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fgrcu")

[node name="Solved" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_18tm3")
volume_db = 15.0

[node name="Gates" parent="." instance=ExtResource("5_kdpsm")]
position = Vector2(3, 506)
